<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.omicronapplications.ftp4jand.FTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/server_title"/>
                <EditText
                    android:id="@+id/ftp_server"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="80"
                    android:inputType="textUri"
                    android:maxLines="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/port_title"/>
                <EditText
                    android:id="@+id/ftp_port"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:text="@string/default_port"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/user_name"/>
                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/password_title"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/connect_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/connect_text"/>
                <Button
                    android:id="@+id/disconnect_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/disconnect_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/login_text"/>
                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/logout_text"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="50">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/remote_title"/>
                <TextView
                    android:id="@+id/remote_path"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remote_description"/>
                <ListView
                    android:id="@+id/ftp_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/local_title"/>
                <TextView
                    android:id="@+id/local_path"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/local_description"/>
                <ListView
                    android:id="@+id/file_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ListView>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_title"/>
            <TextView
                android:id="@+id/service_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
